<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="username_field_input">Username:</string>
    <string name="username_field_hint">Please enter your username</string>
    <string name="password_field_input">Password:</string>
    <string name="password_field_hint">Please enter your password</string>
    <string name="repeat_password_field_input">Repeat:</string>
    <string name="repeat_password_field_hint">Please repeat the password</string>
    <string name="submit_button">Submit</string>
    <string name="random">Random</string>
</resources>
