<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/input_fields_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username_field_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/username_field_input"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/username_field_input_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:hint="@string/username_field_hint"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/password_field_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/password_field_input"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password_field_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:hint="@string/password_field_hint"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/repeat_password_field"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/repeat_field_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/repeat_password_field_input"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/repeat_field_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:hint="@string/repeat_password_field_hint"
                android:textSize="16sp" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/input_fields_wrapper"
        android:layout_below="@id/input_fields_wrapper"
        android:text="@string/submit_button"
        android:textSize="16sp" />


</RelativeLayout>
